<resources>
    <string name="app_name">Alias</string>
    <string name="players_amount">Players amount</string>
    <string name="player">Player</string>
    <string name="team">Team</string>
    <string name="teams_amount">Teams amount</string>
    <string name="ok">OK</string>
    <string name="sec">sec</string>
    <string name="up_arrow" translatable="false">⇧</string>
    <string name="up_arrow_x3" translatable="false">⇧⇧⇧</string>
    <string name="down_arrow" translatable="false">⇩</string>
    <string name="down_arrow_x3" translatable="false">⇩⇩⇩</string>
    <string name="equal" translatable="false">=</string>
    <string name="ready">Ready</string>
    <string name="history">History</string>
    <string name="pick_team">Pick the team</string>
    <string name="no_one">No one</string>
    <string name="round">Round</string>
    <string name="leave_game_question">Leave game?</string>
    <string name="leave_game_warning">Current game progress will be lost. Do you want to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="about_app_header">About app</string>
    <string name="build_version">Build Version</string>
    <string name="vocabulary_header">Vocabulary</string>
    <string name="export_vocabulary">Export to file</string>
    <string name="import_vocabulary">Import from file</string>
    <string name="read_db">Read DB</string>
    <string name="write_file">Write file</string>
    <string name="done">Done</string>
    <string name="read_file">Read file</string>
    <string name="write_db">Write to DB</string>
    <string name="played_words_ignore_days">Do not show words played in last days</string>
    <string name="word_complexity">Words complexity</string>
    <string name="words_amount">Words found</string>
</resources>
