<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/vocabulary_header">
        <Preference
            app:key="import_vocabulary"
            app:title="@string/import_vocabulary">
            <intent
                android:targetClass="jurasikasan.alias.VocabularyImportActivity"
                android:targetPackage="jurasikasan.alias" />
        </Preference>
        <Preference
            app:key="export_vocabulary"
            app:title="@string/export_vocabulary">
            <intent
                android:targetClass="jurasikasan.alias.VocabularyExportActivity"
                android:targetPackage="jurasikasan.alias" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/about_app_header">
        <Preference
            android:key="pref_about_build"
            android:summary="@string/versionName"
            android:title="@string/build_version" />
    </PreferenceCategory>
</PreferenceScreen>
